--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "oracledb": "^6.6.0",
+    "pg": "^8.13.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
