--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.20.0",
     "bcrypt": "^5.1.1",
     "express": "^4.21.0",
     "oracledb": "^6.6.0",
