--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "oracledb": "^6.6.0",
     "pg": "^8.13.0"
   },
