--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,10 +1,10 @@
 server {
     listen 80;
-    server_name partiular.com;
+    server_name partiular.com www.partiular.com;
 
     # Handle API requests
     location /api/ {
-        proxy_pass http://172.21.171.4:3000/;  # Adjust this port to your API server port
+        proxy_pass http://${WSL_IP}:3000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -12,13 +12,14 @@ server {
         proxy_cache_bypass $http_upgrade;
         
         # CORS headers
-        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
         add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
         
-        # Handle preflight requests
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
             add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
             add_header 'Content-Type' 'text/plain charset=UTF-8';
@@ -27,9 +28,8 @@ server {
         }
     }
 
-    # Handle Vite dev server
     location / {
-        proxy_pass http://172.21.171.4:5173;
+        proxy_pass http://${WSL_IP}:5173;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -38,15 +38,15 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # CORS headers for main application
-        add_header 'Access-Control-Allow-Origin' '*' always;
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
     }
 
-    # Handle Vite HMR and static assets
     location ~ ^/(@|node_modules|src) {
-        proxy_pass http://172.21.171.4:5173;
+        proxy_pass http://${WSL_IP}:5173;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
