--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -22,6 +23,6 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "prisma": "^5.19.1"
+    "prisma": "^5.22.0"
   }
 }
